# DMG4-MiniBooNEBD

./: CMakeLists.txt  README.md  batch.mac  brem.cc
include/: ._ActionInitialization.hh  ._DetectorConstruction.hh  ._EventAction.hh  ._PrimaryGeneratorAction.hh  ._RunAction.hh  ._SteppingAction.hh  ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
scripts/: addrootfiles.sh  ebrem1.root  ebrem10.root  ebrem100.root  ebrem11.root  ebrem12.root  ebrem13.root  ebrem14.root  ebrem15.root  ebrem16.root  ebrem17.root  ebrem18.root  ebrem19.root  ebrem2.root  ebrem20.root  ebrem21.root  ebrem22.root  ebrem23.root  ebrem24.root  ebrem25.root  ebrem26.root  ebrem27.root  ebrem28.root  ebrem29.root  ebrem3.root  ebrem30.root  ebrem31.root  ebrem32.root  ebrem33.root  ebrem34.root  ebrem35.root  ebrem36.root  ebrem37.root  ebrem38.root  ebrem39.root  ebrem4.root  ebrem40.root  ebrem41.root  ebrem42.root  ebrem43.root  (+63 more)
scripts/runs/: run1.sh  run10.sh  run100.sh  run11.sh  run12.sh  run13.sh  run14.sh  run15.sh  run16.sh  run17.sh  run18.sh  run19.sh  run2.sh  run20.sh  run21.sh  run22.sh  run23.sh  run24.sh  run25.sh  run26.sh  run27.sh  run28.sh  run29.sh  run3.sh  run30.sh  run31.sh  run32.sh  run33.sh  run34.sh  run35.sh  run36.sh  run37.sh  run38.sh  run39.sh  run4.sh  run40.sh  run41.sh  run42.sh  run43.sh  run44.sh  (+60 more)
src/: ._ActionInitialization.cc  ._DarkMatterPhysicsConfigure.cc  ._EventAction.cc  ._PrimaryGeneratorAction.cc  ._RunAction.cc  ActionInitialization.cc  DarkMatterPhysicsConfigure.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
